--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Julián Gutiérrez Pérez | 1ºASIR</h1>
-        <a href="ejercicios.html"><h3>Ejercicios</h3></a>
+        <a href="ej1.html"><h3>Ejercicios</h3></a>
     </body>
 </html>
