--- a/ejercicios.html
+++ b/ejercicios.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Julián Gutiérrez Pérez | 1ºASIR</h1>
-        <a href="ej1.html"><h3>Ejercicio 1</h3></a>
+        <a href="https://julian9901.github.io/presentacion.pdf"><h3>Ejercicio 1</h3></a>
     </body>
 </html>
