--- a/ejercicios.html
+++ b/ejercicios.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Julián Gutiérrez Pérez | 1ºASIR</h1>
         <a href="https://julian9901.github.io/presentacion.pdf"><h3>Ejercicio 1</h3></a>
+        <a href=""><h3>Ejercicio 2</h3></a>
     </body>
 </html>
