--- a/ejercicios.html
+++ b/ejercicios.html
@@ -10,6 +10,7 @@
         <h2>Tema 1</h2>
         <a href="https://julian9901.github.io/presentacion.pdf"><h3>Ejercicio 1</h3></a>
         <a href=""><h3>Ejercicio 2</h3></a>
+        <a href="julian9901.github.io/cordobapatrimonio.html/index.html"><h3> Córdoba Patrimonio </h3> </a> 
         
         <h2>Tema 2</h2>
         
